# karpathy-llm-dashboard

./: .gitignore  README-ko.md  README.md
app/: .gitignore  .prettierignore  PROGRESS.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  main.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  index.rs  lib.rs  main.rs  vault.rs
app/src/components/: BacklinksPanel.tsx  GraphControls.tsx  GraphFilters.tsx  GraphView.tsx  OllamaSetup.tsx  Sidebar.tsx  Splitter.tsx  Viewer.tsx
app/src/lib/: graphData.ts  graphNodeGlow.ts  graphSettings.ts  graphSim.ts  graphTheme.ts  i18n.ts  ipc.ts  markdown.ts  wikilinks.ts
app/src/pages/: PageGraph.tsx  PageIngest.tsx  PageReader.tsx
app/src/stores/: uiStore.ts  vaultStore.ts
app/src/types/: cytoscape-d3-force.d.ts
dashboard/: index.html  project_registry.py  server.py
docs/: capture.sh
logs/: 2026-04-23.md  2026-04-24.md
mcp-server/: README.md
plans/: architecture-multiproject.md  backlog.md  blocked.md  graph-sigma-migration-plan.md  graph-sigma-migration.md  today-queue.md
wiki/: andrej-karpathy.md  index.md  llm-training-pipeline.md  log.md  nanogpt.md  overview.md
