[package]
name = "memex"
version = "0.1.0"
description = "Memex — desktop wiki for plain markdown vaults"
authors = ["Memex contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "memex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gray_matter = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
